--- a/package.json
+++ b/package.json
@@ -1,1 +1,20 @@
-
+{
+  "name": "messenger",
+  "version": "1.0.0",
+  "description": "bot facebook messenger",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+	"start": "node index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/Gadolo/chat-bot.git"
+  },
+  "author": "yasmina",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Gadolo/chat-bot/issues"
+  },
+  "homepage": "https://github.com/Gadolo/chat-bot#readme"
+}
